update to html heading

--- a/compliance-dashboard.html
+++ b/compliance-dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Security Dashboard - Data Entry & Export</title>
+    <title>Security Dashboard Export Tool</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
@@ -362,7 +362,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Security Dashboard Data Entry & Export Tool</h1>
+            <h1>Security Compliance Export Tool</h1>
         </div>
 
         <div class="tab-container">
